# foil-bots

./: .env.example  LICENSE  README.md  pyproject.toml  setup.sh
arbitrage-bot/: pyproject.toml
arbitrage-bot/src/bot/: __main__.py  foil.py  position.py
docs/: render_deployment.md
fluxor_bot/: README.md  __init__.py  env.example  pyproject.toml
fluxor_bot/src/bot/: __init__.py  __main__.py  api_client.py  config.py  exceptions.py  foil.py  llm_post_generator.py  market_manager.py  position.py  position_manager.py  strategy.py  x_client.py
garb_bot/: .env.example  README.md  pyproject.toml
garb_bot/src/bot/: __init__.py  __main__.py  api_client.py  arb.py  config.py  exceptions.py  foil.py  position.py
loom-bot/: README.md  pyproject.toml
loom-bot/src/bot/: __init__.py  config.py  foil.py  strategy.py
loom_bot/: __init__.py  pyproject.toml
loom_bot/src/bot/: __init__.py  __main__.py  api_client.py  config.py  foil.py  position.py
shared/abis/: __init__.py
shared/clients/: async_api_client.py  discord_client.py
shared/config/: config_manager.py
shared/utils/: async_web3_utils.py  openai_client.py  web3_utils.py
src/bot/: __init__.py  api_client.py  config.py  discord_client.py  exceptions.py  foil.py  position.py  strategy.py  utils.py
