[tool.poetry]
name = "fluxor-bot"
version = "0.1.0"
description = "Multi-market automated trading bot for the FOIL protocol"
authors = ["sunny <sunny@foil.xyz>"]
readme = "README.md"
packages = [
    { include = "src" }
]

# Note: Dependencies are managed by the root pyproject.toml
# These are kept for reference if this bot is ever extracted as a standalone package
[tool.poetry.dependencies]
python = "^3.11"
web3 = "^7.4.0"
python-dotenv = "^1.0.1"
discord-py = "^2.5.0"
gql = {extras = ["requests", "aiohttp"], version = "^3.5.0"}
openai = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fluxor-bot = "src.bot.__main__:main"

[tool.poetry.group.dev.dependencies] 